fixed issue while creating bug envs list